syntax = "proto3";

package orders;

message OrderItem {
  string product_id = 1;
  double quantity = 2;
  double sales_price = 3;
  double subtotal = 4;
}

message CreateOrderItemRequest {
  string product_id = 1;
  double quantity = 2;
  double sales_price = 3;
}

message UpdateOrderItemRequest {
  string product_id = 1;
  optional double new_quantity = 2;
  optional double new_sales_price = 3;
}

message Order {
  string id = 1;
  string user_id = 2;
  repeated OrderItem items = 3;
  double total = 4;
}

message ListOrdersRequest {
  string request_user_id = 1;
  int32 page = 2;
  int32 limit = 3;
}

message ListOrdersResponse {
  repeated Order orders = 1;
  int32 current_page = 2;
  int32 page_items = 3;
  int32 total_items = 4;
  bool has_previous_page = 5;
  int32 previous_page = 6;
  bool has_next_page = 7;
  int32 next_page = 8;
}

message GetOrderRequest {
  string request_user_id = 1;
  string order_id = 2;
}

message GetOrderResponse {
  Order order = 1;
}

message CreateOrderRequest {
  string request_user_id = 1;
  repeated CreateOrderItemRequest order_items = 2;
}

message CreateOrderResponse {
  Order new_order = 1;
}

message UpdateOrderRequest {
  string request_user_id = 1;
  string order_id = 2;
  repeated UpdateOrderItemRequest items_updates = 3;
}

message UpdateOrderResponse {
  Order updated_order = 1;
}

message DeleteOrderRequest {
  string request_user_id = 1;
  string order_id = 2;
}

message DeleteOrderResponse {
  bool success = 1;
}

service OrderService {
  rpc ListOrders(ListOrdersRequest) returns (ListOrdersResponse) {}
  rpc GetOrder(GetOrderRequest) returns (GetOrderResponse) {}
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse) {}
  rpc UpdateOrder(UpdateOrderRequest) returns (UpdateOrderResponse) {}
  rpc DeleteOrder(DeleteOrderRequest) returns (DeleteOrderResponse) {}
}
